--- a/complaint_management/templates/base.html
+++ b/complaint_management/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom mb-3">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Complaint Management System</a>
+            <a class="navbar-brand fw-bold text-dark" href="#">Complaint Management System</a>
 
             <div class="ms-auto">
                 {% if user.is_authenticated %}
